--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.6.8",
+    "axios-jsonp": "^1.0.4",
     "html-react-parser": "^5.1.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -33,5 +35,5 @@
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   },
-  "proxy":"http://localhost:8080"
+  "proxy": "http://localhost:8080"
 }
